[package]
name = "arxiv_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["cargo"] }
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
regex = "1"
concat-string = "1.0.1"
tokio = { version = "1.28.1", features = ["macros"] }
tar = "0.4.38"
flate2 = "1.0.26"
